# gef-1

./: .gitignore  CNAME  LICENSE  cli.py  gef.code-workspace  index.html  muon_search_results.csv  pyproject.toml  pyprojects.toml
dear_collaborator/: README
reports/kinematics_v1/: README.md
reports/yang_mills/: README.md  check_vacuum.py  hopfion_relaxer_yang_mills.py  run_excitation_chain.py  run_muon_sweep.sh  run_stability_map-yang_mills.py
reports/yang_mills/configs/: better_summit.yml  bigger_boat.yml  boundary_search.yml  confinement_search.yml  confinement_search_mu2_2p0.yml  confinement_search_mu2_3p0_highP.yml  even_bigger_boat.yml  final_final_final_final.yml  original_summit.yml  shark_eat_boat.yml  step1_electron.yml  step2_muon.yml  step3_yau.yml  summit_troubleshooting.yml
scripts/: GPT_STRUCTURE.md
scripts-old/_snippets/: o3_corrections.txt
scripts-old/_snippets/Initital Scripts/: DelteMyAss.py
scripts-old/run_stability_map/configs/: default_run_stability_map.yml
scripts/Initital Scripts/: ppn_extraction_redux.py
scripts/Initital Scripts/.ipynb_checkpoints/: bending_light-checkpoint.py  century_enhancement-checkpoint.py  gravity_time_isomorphism-checkpoint.ipynb
scripts/_snippets/: k_modulation.py  ppn_corrections.ipynb  pypypy.py
scripts/_snippets/.ipynb_checkpoints/: ppn_corrections-checkpoint.ipynb
scripts/_snippets/Initital Scripts/: DelteMyAss.py  gravity_time_isomorphism.ipynb
scripts/contractor/: calculate_radius.py  kinematics_contractor.py
scripts/contractor_code/: calculate_radius.py
scripts/core/: bifurcation_scan.py
scripts/core/bifurcation_scan/: bifurcation_scan.py
scripts/core/gef_mass_spectrometer/: gef_mass_spectrometer.py
scripts/core/geometric_speed_of_light/: geometric_speed_of_light.py  planck_particle.py
scripts/core/k_flow_simulator/: k_flow_simulator.py
scripts/find_geometric_intersection/: find_geometric_intersection.py
scripts/find_geometric_intersection/configs/: default_geometric_intersection.yml
scripts/fractals/: anisotropic_sieve.py  borwein_stabilization.py
scripts/fractals/benfords_law/: benfords_law.py
scripts/papers/: emergent_kinematics.py
scripts/run_nw_mass_spectrum/: run_nw_mass_spectrum.py
scripts/run_s3_trajectory_sweep/: run_s3_trajectory_sweep.py
scripts/run_stability_map/: run_stability_map.py
scripts/run_standard_model_family/: run_standard_model_family.py
src/gef.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/gef/cli/: __init__.py  common.py  constants.py  (+2 more)
src/gef_core/: hopfion_geodesic_engine.py  s3_geodesic_engine.py
src/gef_geometry/: oneshot_viz.py
tests/: test_constants.py  test_hopfion_relaxer.py
vault_public/vault_public/: CSS Test.md
(+89 files in other folders)
