[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gef"
version = "0.1.0"
description = "General Euclidean Flow"
authors = [
    {name = "Matthew Lacorte"}
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "sympy",
    "pyyaml",
    "loguru",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest",
]

[project.scripts]
gef = "gef.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}


[tool.black]
line-length = 100
target-version = ["py310"]
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | _old
  | notebooks
  | vault
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
    "notebooks",
    "vault",
]
# Enable common rulesets:
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort (import order)
    "B",  # bugbear
    "C90",  # mccabe complexity
    "UP",  # pyupgrade
]
fix = true
show-fixes = true

# Optional: ignore certain annoying rules
ignore = [
    "E501",  # line too long (let Black handle this)
]
